Load dplyr transiently; simplify output.
Also use native R pipes and edit chunk header.

--- a/vignettes/RegionWidths.Rmd
+++ b/vignettes/RegionWidths.Rmd
@@ -147,11 +147,29 @@ Below, I take the `widths_all_tibble` and perform some statistical operations on
 ## Details 
 <details>
 <summary> Click here to view the full table with many summary statistics for width distributions.</summary>
-```{r saving_width_statistics_for_later, dependson="pre_compute_widths_object", fig.width=12, fig.height=8}
-widths_stats <- widths_all_tibble %>%
-    group_by(genus, class, dist, distS, what, name, nonCoa, chr, Arm) %>%
-    summarise(across(width, list(n=~n(), min=min, q25 = ~quantile(., 0.25),  median=median, q75 = ~quantile(., 0.75), max=max, mean=mean, sd=sd, var=var)))
-(widths_stats)
+```{r saving_width_statistics_for_later, dependson="width_after_processing_steps"}
+library(dplyr) |> suppressPackageStartupMessages()
+stats_to_compute <- list(n      = ~n(),
+                         min    = min,
+                         q25    = ~quantile(., 0.25),
+                         median = median,
+                         q75    = ~quantile(., 0.75),
+                         max    = max,
+                         mean   = mean,
+                         sd     = sd)
+
+old.o <- options(max.print = 2000)
+
+widths_all_tibble |>
+    group_by(name, class, what) |>
+    summarise(across(width, stats_to_compute)) |> as.data.frame()
+
+widths_all_tibble |>
+    group_by(what, class, genus) |>
+    summarise(across(width, stats_to_compute)) |> as.data.frame()
+
+options(old.o)
+detach('package:dplyr')
 ```
 </details>
 
