--- a/vignettes/RegionWidths.Rmd
+++ b/vignettes/RegionWidths.Rmd
@@ -12,9 +12,13 @@ editor_options:
   chunk_output_type: console
 ---
 
+```{css, echo=FALSE}
+pre, code {white-space:pre !important; overflow-x:auto}
+```
+
 ```{r setup}
 knitr::opts_chunk$set(cache = TRUE, cache.lazy = FALSE)
-knitr::opts_knit$set(verbose = TRUE)
+options(width = 200)
 ```
 
 # Load R pacakges and data
