Renamed mapped unaligned to bridge.

--- a/vignettes/LoadGenomicBreaks.Rmd
+++ b/vignettes/LoadGenomicBreaks.Rmd
@@ -325,8 +325,8 @@ makeWholeGenomeObject <- function(aligned, unaligned, coalesced) {
 wgo <- mapply(makeWholeGenomeObject, gbs, unal, coa) |> SimpleList()
 ```
 
-Mapped unaligned regions
-------------------------
+Bridge regions
+--------------
 
 We can pair the unaligned regions that are between two colinearly aligned regions.
 
